feat: correct imgs path

--- a/layout/signup.html
+++ b/layout/signup.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="signup.css">
 </head>
 <body>
-    <header class="signup__header"> <img class="signup__header__logo"  src="trello.png" alt=""></header>
+    <header class="signup__header"> <img class="signup__header__logo"  src="..\media\trello.png" alt=""></header>
    <div class="signup">
     <h1>Sign up for your account</h1>
     <input class="signup__email "type="email" name="email" value placeholder= " Enter email">
@@ -16,9 +16,9 @@
     <button class="signup__button"><b>Continue</b> </button>
     <p>OR</p>
     <div class="signup__with">
-    <button class="signup__with__button"> <img class="signup__with__img" src="google.png" alt=""> <b>Continue with Google</b> </button>
-    <button class="signup__with__button"> <img class="signup__with__img" src="microsoft.png" alt=""> <b>Continue with Microsoft</b> </button>
-    <button class="signup__with__button"> <img class="signup__with__img" src="apple.png" alt=""> <b>Continue with Apple</b> </button>
+    <button class="signup__with__button"> <img class="signup__with__img" src="..\media\google.png" alt=""> <b>Continue with Google</b> </button>
+    <button class="signup__with__button"> <img class="signup__with__img" src="..\media\microsoft.png" alt=""> <b>Continue with Microsoft</b> </button>
+    <button class="signup__with__button"> <img class="signup__with__img" src="..\media\apple.png" alt=""> <b>Continue with Apple</b> </button>
     </div>
     <hr>
     <a href="">Already have an account? Log In</a>
