--- a/layout/login.html
+++ b/layout/login.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="login.css">
 </head>
 <body>
-    <header class="login__header"> <img class="login__header__logo"  src="trello.png" alt=""></header>
+    <header class="login__header"> <img class="login__header__logo"  src="..\media\trello.png" alt=""></header>
    <div class="login">
     <h1>Log in to Trello</h1>
     <input class="login__email "type="email" name="email" value placeholder= " Enter email">
@@ -17,9 +17,9 @@
     <button class="login__button"><b>Log in</b> </button>
     <p>OR</p>
     <div class="login__with">
-    <button class="login__with__button"> <img class="login__with__img" src="google.png" alt=""> <b>Continue with Google</b> </button>
-    <button class="login__with__button"> <img class="login__with__img" src="microsoft.png" alt=""> <b>Continue with Microsoft</b> </button>
-    <button class="login__with__button"> <img class="login__with__img" src="apple.png" alt=""> <b>Continue with Apple</b> </button>
+    <button class="login__with__button"> <img class="login__with__img" src="..\media\google.png" alt=""> <b>Continue with Google</b> </button>
+    <button class="login__with__button"> <img class="login__with__img" src="..\media\microsoft.png" alt=""> <b>Continue with Microsoft</b> </button>
+    <button class="login__with__button"> <img class="login__with__img" src="..\media\apple.png" alt=""> <b>Continue with Apple</b> </button>
     </div>
     <hr>
     <a href="">Already have an account? Log In</a>
