--- a/layout/main_board.html
+++ b/layout/main_board.html
@@ -4,51 +4,65 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Main Board</title>
+    <title>Board</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="main_board.css">
-    <script src="https://kit.fontawesome.com/2a772c5ea3.js" crossorigin="anonymous"></script>
 </head>
-
 <body>
-    <div class="header_board">
+    <header>
         <nav>
-            <ul>
-               
-                <div class="lineOne">
-                 
-                <li><a href="#" class="botton"><i class="fa-solid fa-chart-simple"></i>
-                    Board <i class="fa-solid fa-angle-down"></i></a></li>
-                <input type="name" class="name-board"style="background-color:transparent; ">
-                <li><a href="#" class="botton" <i class="fa-solid fa-star"></i><i class="fa-regular fa-star"></i></a></li>
-                <li><a href="#" class="botton">Espacio de trabajo de Trello</button></a></li>
-                <li><a href="#" class="botton"><i class="fa-solid fa-user-group"></i>Workspace visible</a></li>
-                </div>
-            
-                <div class="lineTwo">
-              
-                <li><a href="#" class="botton"><i class="fa-solid fa-circle-h"></i></a></li>
-                <li><a href="#" class="botton"><i class="fa-solid fa-user-plus"></i> Share</a></li>
-                <li><a href="#" class="botton"><i class="fa-solid fa-rocket"> </i> Power-Ups</a></li>
-                <li><a href="#" class="botton"><i class="fa-solid fa-bolt-lightning"></i> Automation</a></li>
-                <li><a href="#" class="botton"><i class="fa-solid fa-filter"></i> Filter</a></li>
-                <li><a href="#" class="botton"><i class="fa-solid fa-ellipsis"></i> Show menu</a></li>
-                </div>
+            <ul class="header__left">
+                <li><a href="#" ><i class="fa-solid fa-chart-simple"></i>  Board</a>
+                    <ul class="header__left__items">
+                        <li><a href="#" >Map <br> Visualize card locations on an interactive map. </a></li> 
+                        <li><a href="#" >Timeline <br> Visually plan time and workload  </a></li>
+                        <li><a href="#" >Calendar<br> See cardsw with due dates in a monthly or weekly</a></li>
+                        <li><a href="#" >Dashboard<br> Generate charts</a></li>
+                        <li><a href="#" >Table<br> Display and edit cards in a table format</table></a></li>
+                    </ul>
+                </li>
+                <li class="header__left__nameboard"><input type="name" class="name-board"style="background-color:transparent;"></li>
+                <li><a href="#" <i class="fa-regular fa-star"></i></a>
+                <li><a href="#" >Espacio de trabajo de Trello</a>
+                    <ul class="header__left__items">
+                        <li><a href="#" >Change Workspace</a></li>
+                        <li><a href="#" >View Workspace page</a></li>
+                    </ul>
+                </li>
+                <li><a href="#"><i class="fa-solid fa-user-group"></i> Workspace visible</a>
+                    <ul class="header__left__items">
+                        <li><a href="#">Private<br>Board members and Spacio de trabajo de Trello Workspace admins can see and edit this board</a></li>
+                        <li><a href="#">Workspace<br>All members of the Espacio de trabajo de Trello Workspace can see and edit this board</a></li>
+                        <li><a href="#">Organization<br>All members of the organization can see this board. The board must be added to an enterprise Workspace to enable this</a></li>
+                        <li><a href="#">Public<br>Anyone on the internet can see this board. Only board members can edit.</a></li>
+                    </ul>
+                </li>
+                <li><a href="#"><i class="fa-solid fa-circle-h"></i></a></a></li>
+                <li><a href="#" ><i class="fa-solid fa-user-plus"></i> Share</a></li>
+            </ul>
+            <ul class="header__right">
+                <li><a href="#"><i class="fa-solid fa-ellipsis"></i> Show menu</a></li>
+                <li><a href="#"><i class="fa-solid fa-filter"></i> Filter</a></li>
+                <li><a href="#"><i class="fa-solid fa-bolt-lightning"></i> Automation</a>
+                    <ul class="header__right__items">
+                        <li><a href="#" >Rules<br>Create rules that automatically respond to actions, schedules, or a cards due date</a></li>
+                        <li><a href="#" >Buttons<br>Create custom buttons on the back of every card or at the top of the board.</a></li>
+                        <li><a href="#" >Email reports<br>Set up email reports, such as a wrrkly summary of all cards that are due within 7 days.</a></li>
+                    </ul>
+                </li>
+                <li><a href="#"><i class="fa-solid fa-rocket"> </i> Power-Ups</a></li>
             </ul>
 
         </nav>
-
-
-
-    </div>
-
+        
+    </header>
 
     <div class="listGroup">
         <div class="list">
             <input type="text" class="textContent buttonCard " placeholder="+ Add a list">
         </div>
     </div>
-    
-    
+
 
 
 </body>
