feat: finish login and signup

--- a/layout/login.html
+++ b/layout/login.html
@@ -10,23 +10,30 @@
 <body>
     <header class="login__header"> <img class="login__header__logo"  src="..\media\trello.png" alt=""></header>
    <div class="login">
-    <h1>Log in to Trello</h1>
-    <input class="login__email "type="email" name="email" value placeholder= " Enter email">
-    <input class="login__password "type="password" name="email" value placeholder= " Enter password">
+        <h1>Log in to Trello</h1>
+        <input class="login__email "type="email" name="email" value placeholder= " Enter email">
+        <input class="login__password "type="password" name="email" value placeholder= " Enter password">
     
-    <button class="login__button"><b>Log in</b> </button>
-    <p>OR</p>
-    <div class="login__with">
-    <button class="login__with__button"> <img class="login__with__img" src="..\media\google.png" alt=""> <b>Continue with Google</b> </button>
-    <button class="login__with__button"> <img class="login__with__img" src="..\media\microsoft.png" alt=""> <b>Continue with Microsoft</b> </button>
-    <button class="login__with__button"> <img class="login__with__img" src="..\media\apple.png" alt=""> <b>Continue with Apple</b> </button>
+        <button class="login__button"><b>Log in</b> </button>
+        <p>OR</p>
+        <div class="login__with">
+            <button class="login__with__button"> <img class="login__with__img" src="..\media\google.png" alt=""> <b>Continue with Google</b> </button>
+            <button class="login__with__button"> <img class="login__with__img" src="..\media\microsoft.png" alt=""> <b>Continue with Microsoft</b> </button>
+            <button class="login__with__button"> <img class="login__with__img" src="..\media\apple.png" alt=""> <b>Continue with Apple</b> </button>
+        </div>
+        <a href="">Log in with SSO</a>
+        <hr>
+        <div class="login__cantlog">
+            <ul>
+                <li> <a href="">Can't log in?</a> </li>
+                <li> <a href="">Sign up for an account</a> </li>
+            </ul>
+        </div>
     </div>
-    <hr>
-    <a href="">Already have an account? Log In</a>
-
-   </div>
-
-   <a href="">Terms of Service</a>  <a href="">Privacy Policy</a>
+    <div class="login__politics">
+        <p class="login__politics__Service"><a href="">Terms of Service</a>  </p>              
+        <p class="login__politics_Privacy"><a href="">Privacy Policy</a></p>
+    </div>
    
    <div class="login__language">
    <select name="Language Picker" class="login__language-picker">
