--- a/layout/signup.css
+++ b/layout/signup.css
@@ -27,9 +27,9 @@
     margin-top: auto;
     margin-bottom: auto;
     justify-content: space-around;
-    font-family: "-apple-system",BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,"Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
-    
+    font-family: "-apple-system",BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,"Fira Sans","Droid Sans","Helvetica Neue",sans-serif;    
 }
+
 h1 {
     text-align: center;
     color: #5E6C84;
@@ -52,9 +52,15 @@ h1 {
     font: inherit;
     border: 1px solid #CDD2D4;
     border-radius: 5px;
-    box-sizing: border-box;
-    
+    box-sizing: border-box;    
 }
+
+.signup__email:focus {
+    outline: none;
+    border:1px solid rgb(15, 74, 223);
+    box-shadow: 0 0 10px #719ECE;
+    transition-duration: 0.4s;
+  }
 
 .signup__politics {
     text-align:justify;
@@ -65,8 +71,7 @@ h1 {
     color: #5E6C84;
 }
 
-.signup__button {
-    
+.signup__button {    
     color: hsl(0,0%,55%);
     width:100%;
     height: 8%;
@@ -74,13 +79,11 @@ h1 {
     border: none;
     background-color: rgba(123, 116, 116, 0.312);
     border-radius: 5px;
-    cursor: pointer
-    
+    cursor: pointer    
 }
 
 .signup__with {
-    display: block;
-    
+    display: block;    
 }
 
 .signup__with__button {
@@ -98,18 +101,12 @@ h1 {
     color: #5E6C84;
     cursor: pointer;
     display: flex;
-    justify-content: center; 
-    
-     
-    
-    
+    justify-content: center;    
 }
 
 .signup__with__button:hover {
     transition-duration: 0.4s;
-    background-color: #f6f6f6;
-    
-    
+    background-color: #f6f6f6;    
   }
 
 .signup__with__img {
@@ -139,4 +136,9 @@ hr {
     height: 50px;
     padding: 0.5em;
     
+}
+
+a {
+    color: #0052CC;
+    text-decoration: none;
 }
