--- a/layout/header_footer.html
+++ b/layout/header_footer.html
@@ -12,8 +12,8 @@
 
 
 
-    <header class="header">
-        <nav class="header__navigator">
+    <header>
+        <nav class="header__nav">
             <a href="#" class="header__a">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7a/Trello-logo-blue.svg/2560px-Trello-logo-blue.svg.png" alt="" class="header__logo">
             </a>
@@ -27,17 +27,51 @@
                 <li class="header__li"><a href="" class="header__a">Plans</a></li>
                 <li class="header__li"><a href="" class="header__a">Pricing</a></li>
                 <li class="header__li"><a href="" class="header__a">Resources</a></li>
+                <li><button></button></li>
+                <li><button></button></li>
             </ul>
         </nav>
-
     </header>
 
 
 
-    <!-- <footer>
-        <section>
-            <p>contact us</p>
+    <footer class="footer">
+        <section class="footer_section">
+            <div class="footer_section__up">
+                <div class="footer__div">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7a/Trello-logo-blue.svg/2560px-Trello-logo-blue.svg.png" alt="" class="footer__logo">
+                    <a href="#" class="redes">Log in</a>
+                </div>
+                <div class="footer__div">
+                    <ul class="footer__ul">
+                        <li class="footer__li"><a class="redes" href="#">About Trello</a></li>
+                        <li class="footer__li"><a class="redes" href="#">Jobs</a></li>
+                        <li class="footer__li"><a class="redes" href="#">Apps</a></li>
+                        <li class="footer__li"><a class="redes" href="#">Ingerations</a></li>
+                        <li class="footer__li"><a class="redes" href="#">Contact us</a></li>
+                    </ul>
+                </div>
+            </div>
         </section>
-    </footer> -->
+        <section class="footer__section">
+            <div class="footer_section__down">
+                <div class="footer__div__center">
+                    <ul class="footer__ul">
+                        <li class="footer__li"><a class="redes" href="#">Privacy Policy</a></li>
+                        <li class="footer__li"><a class="redes" href="#">Terms</a></li>
+                        <li class="footer__li"><a class="redes" href="#">Cookie Settings</a></li>
+                        <li class="footer__li"><a class="redes" href="#">Copiright 2022 Atlassian</a></li>
+                    </ul>
+                </div>
+                <div class="footer__div__down">
+                    <a class="redes" href="#"><i class="fa-brands fa-instagram"></i></a>
+                    <a class="redes" href="#"><i class="fa-brands fa-facebook"></i></a>
+                    <a class="redes" href="#"><i class="fa-brands fa-linkedin"></i></a>
+                    <a class="redes" href="#"><i class="fa-brands fa-twitter"></i></a>
+                    <a class="redes" href="#"><i class="fa-brands fa-youtube"></i></a>
+                </div>
+            </div>
+        </section>
+    </footer>
 </body>
 </html>
