feat: modify url relative images

--- a/layout/board.html
+++ b/layout/board.html
@@ -19,7 +19,7 @@
                                     <li class="container__nav__li">
                                         <a href="#" class="container__nav__a a__boards">
                                             <span class="container__image"> 
-                                                <img class="container__icon" src="./media/trello_icon.jpg" alt="trello icon">                                            
+                                                <img class="container__icon" src="../media/trello_icon.jpg" alt="trello icon">                                            
                                             </span>
                                             <span class="container__boards">Boards</span>
                                         </a>
@@ -35,7 +35,7 @@
                                     <li class="container__nav__li">
                                         <a href="#" class="container__nav__a">
                                             <span class="container__image">                                           
-                                                <img src="./media/trello_icon_home.png" alt="trello icon home" class="container__icon">
+                                                <img src="../media/trello_icon_home.png" alt="trello icon home" class="container__icon">
                                             </span>
                                             <span class="container__boards">Home</span>
                                         </a>
