--- a/src/styles/components/_NavBar.scss
+++ b/src/styles/components/_NavBar.scss
@@ -1,14 +1,14 @@
-*{
-  padding: 0;
-  margin: 0;
-  text-decoration: none;
-  list-style: none;
-  box-sizing: border-box;
-  font-family: "Charlie Text", sans-serif;
-}
-body{
-  background-color: #293856;
-}
+// *{
+//   padding: 0;
+//   margin: 0;
+//   text-decoration: none;
+//   list-style: none;
+//   box-sizing: border-box;
+//   font-family: "Charlie Text", sans-serif;
+// }
+// body{
+//   background-color: #293856;
+// }
 
 .header__nav{
   background: #ffffff;
@@ -65,7 +65,8 @@ body{
   }
   .header__ul{
 
-      flex-basis: 70%;
+      //flex-basis: 15%;
+      justify-content: right;
       position:static;
       display: flex;
       top: 100px;
@@ -77,10 +78,4 @@ body{
       margin: 1px;
   }
 
-  .footer__section__down{
-      border-top: 1px solid #505f79;
-      display: flex;
-
-  }
 }
-
