--- a/src/components/backgroundBoard/backgroundBoard.scss
+++ b/src/components/backgroundBoard/backgroundBoard.scss
@@ -1,3 +1,13 @@
+$background-image1: url('../../../public/img/backgroundImage1.jpg');
+$background-image2: url('../../../public/img/backgroundImage2.jpg');
+$background-image3: url('../../../public/img/backgroundImage3.jpg');
+$background-image4: url('../../../public/img/backgroundImage4.jpg');
+
+$background-blue: rgb(0, 121, 191);
+$backgound-orange: rgb(210, 144, 52);
+$background-green: rgb(81, 152, 57);
+$background-red: rgb(176, 70, 50);
+
 .board__ul {
     list-style: none;
     margin: 0;
@@ -41,21 +51,51 @@
             right: 0;
             top: 0;
             border-radius: 3px;
-            opacity: 0.7;
+            opacity: 0.75;
             transition: .4s all;
         } 
           
     }
 
-    &__button {
-        background-color: rgb(0, 121, 191);;
+    &__button {        
         font-family: 'Helvetica Neue', sans-serif;
         font-size: 14px;
         font-weight: 400;
         box-sizing: border-box;        
         border: none;   
-        text-decoration: none;
-
-         
+        text-decoration: none;         
     }    
+    
 }
+
+.button1 {
+    background-image: $background-image1;
+}
+.button2 {
+    background-image: $background-image2;
+}
+.button3 {
+    background-image: $background-image3;
+}
+
+.button4 {
+    background-image: $background-image4;
+}
+
+
+.button5 {
+    background-color: $background-blue;
+}
+
+.button6 {
+    background-color: $backgound-orange;
+}
+
+.button7 {
+    background-color: $background-green;
+}
+
+.button8 {
+    background-color: $background-red;
+}
+
