--- a/src/pages/createBoard/createBoard.scss
+++ b/src/pages/createBoard/createBoard.scss
@@ -29,7 +29,7 @@
             border-bottom: 1px solid rgba(9, 30, 66, 0.13);
             color: #5e6c84;
             display: block;
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Noto Sans', 'Ubuntu', 'Droid Sans', 'Helvetica Neue', sans-serif;
+            font-family: 'Helvetica Neue', sans-serif;
             font-size: 16px;    
             font-weight: 400;
             grid-column: 1 / span 3;
