--- a/src/pages/board/mainboard.scss
+++ b/src/pages/board/mainboard.scss
@@ -66,3 +66,31 @@
 }
 
 }
+
+.workSpace{
+  background-color: #0079BF;
+  width: 100%;
+  height: 500px;
+  padding-top: 30px;
+  
+  .textContent{
+    background-color: rgb(82, 164, 212);
+    width: 200px;
+    height: 30px;
+    font-size: 15px;
+    border: none;
+    color: white;
+    outline: none;
+    border-radius: 3px;
+    display: block;
+    margin: 30px 0 0 45px;
+    
+
+  }
+
+  .buttonCard::placeholder{
+    color: white;
+    
+  }
+
+}
