--- a/src/pages/board/mainboard.scss
+++ b/src/pages/board/mainboard.scss
@@ -6,6 +6,7 @@
     list-style: none;
     float: none;
     background-color: #0079BF;
+    height: 300px;
      a {
         text-align: center;
         color: rgb(49, 132, 180);
@@ -39,10 +40,12 @@
         margin: 5px 10px 8px 50px;
         color: white;
         font-size: .9 rem;
-
-
       }
 
+      input::placeholder{
+        color: white;
+        font-size: 15px;
+      }
 
       input:hover{
         background-color: rgb(30, 73, 98);
@@ -63,6 +66,35 @@
         display: flex;
         justify-content: flex-start;
         align-items: center;
+        height: auto;
 }
+
+}
+
+.workSpace{
+  background-color: #0079BF;
+  width: 100%;
+  height: 500px;
+  padding-top: 30px;
+  
+  .textContent{
+    background-color: rgb(82, 164, 212);
+    width: 200px;
+    height: 30px;
+    font-size: 15px;
+    border: none;
+    color: white;
+    outline: none;
+    border-radius: 3px;
+    display: block;
+    margin: 30px 0 0 45px;
+    
+
+  }
+
+  .buttonCard::placeholder{
+    color: white;
+    
+  }
 
 }
