--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -2,8 +2,8 @@
     background-color: #293856;
     width: 100%;
     height: auto;
-    padding: 40px;
-    margin: 20px 0px 20px 0px;
+    padding: 40px 0px;
+    margin: 20px 0px 0px 0px;
     text-align: center;
     color: #fff;
 
