--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,7 +1,8 @@
 // UI settings
-
+@import './config.scss';
 //Components
 @import './components/NavBar';
 @import './components/Footer';
+
 
 //Pages
