--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -12,3 +12,4 @@
 @import './pages/login.scss';
 @import './pages/signup.scss';
 @import './pages/mainboard.scss';
+@import './pages/manageBoard.scss';
