--- a/src/styles/pages/signup.scss
+++ b/src/styles/pages/signup.scss
@@ -1,16 +1,16 @@
 .signup {
   display: flexbox;
   align-items: center;
-  justify-content: center; 
+  justify-content: center;
   height: 100vh;
 }
 
 .signup__header {
-  display: flex;    
+  display: flex;
   justify-content: space-around;
-  width: 350px;
+  max-width: 350px;
   margin-left: auto;
-  margin-right: auto;  
+  margin-right: auto;
   margin-top: 15px;
   padding-left: 40px;
   padding-right: 40px;
@@ -22,25 +22,22 @@
   margin-left: auto;
   margin-right: auto;
   margin-top: 20px;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 .signup__form {
-  
-  display: block;    
+  display: block;
   padding: 10px;
   height: 520px;
-  width: 350px;
-  text-align:center;    
+  max-width: 350px;
+  text-align:center;
   background-color: #FFFFFF;
-  border-radius: 3px;
   padding: 25px 40px;
-  box-shadow: rgb(0 0 0 / 10%) 0 0 10px;
   margin-left: auto;
   margin-right: auto;
   margin-top: auto;
   margin-bottom: auto;
   justify-content: space-around;
-  font-family: "-apple-system",BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,"Fira Sans","Droid Sans","Helvetica Neue",sans-serif;    
+  font-family: "-apple-system",BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,"Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
 }
 
 h1 {
@@ -65,7 +62,7 @@ h1 {
   font: inherit;
   border: 1px solid #CDD2D4;
   border-radius: 5px;
-  box-sizing: border-box;    
+  box-sizing: border-box;
 }
 
 .signup__email:focus {
@@ -82,10 +79,9 @@ h1 {
   font-size: 12px;
   line-height: 16px;
   color: #5E6C84;
-  
 }
 
-.signup__button {    
+.signup__button {
   color: hsl(0,0%,55%);
   width:100%;
   height: 8%;
@@ -93,11 +89,11 @@ h1 {
   border: none;
   background-color: rgba(123, 116, 116, 0.312);
   border-radius: 5px;
-  cursor: pointer    
+  cursor: pointer;
 }
 
 .signup__with {
-  display: block;    
+  display: block;
 }
 
 .signup__with__button {
@@ -110,17 +106,17 @@ h1 {
   padding: 5px;
   align-items: center;
   border-radius: 5px;
-  text-align:center; 
+  text-align:center;
   vertical-align:middle;
   color: #5E6C84;
   cursor: pointer;
   display: flex;
-  justify-content: center;    
+  justify-content: center;
 }
 
 .signup__with__button:hover {
   transition-duration: 0.4s;
-  background-color: #f6f6f6;    
+  background-color: #f6f6f6;
 }
 
 .signup__with__img {
@@ -142,12 +138,12 @@ hr {
   display: flex;
   justify-content: center;
   margin-top: 1em;
-  width: 350px;
-  display: flex;    
-  justify-content: space-around;    
+  max-width: 350px;
+  display: flex;
+  justify-content: space-around;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 1em;    
+  margin-bottom: 1em;
   padding-left: 40px;
   padding-right: 40px;
 }
@@ -157,10 +153,89 @@ hr {
   border: 2px solid #EDEFF0;
   height: 50px;
   padding: 0.5em;
-  
 }
 
 a {
   color: #0052CC;
   text-decoration: none;
+}
+
+.signup__footer__img {
+  visibility: hidden;
+}
+
+.signup__footer__img1 {
+  position: fixed;
+  bottom: 0px;
+  right: 5px;
+  height: 5px;
+  width: 5px;
+}
+
+.signup__footer__img2 {
+  position: fixed;
+  bottom: 0px;
+  right: 5px;
+  height: 5px;
+  width: 5px;
+}
+
+@media (min-width: 640px) {
+  .signup {
+    background-color: #F9FAFC;
+    position: relative;
+    z-index: 0;
+    height: 100vh;
+  }
+  .signup__form {
+    display: block;
+    padding: 10px;
+    height: 600px;
+    max-width: 350px;
+    text-align:center;
+    background-color: #FFFFFF;
+    border-radius: 3px;
+    padding: 25px 40px;
+    box-shadow: rgb(0 0 0 / 10%) 0 0 10px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: auto;
+    margin-bottom: auto;
+    justify-content: space-around;
+    font-family: "-apple-system",BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,"Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
+}
+.signup__header__logo {
+  margin-bottom: 40px;
+}
+.signup__footer__img {
+  display: inline;
+  visibility: visible;
+}
+.signup__footer__img1 {
+  z-index: -1;
+  position: fixed;
+  bottom: 0px;
+  left: 5px;
+  height: 200px;
+  width: 200px;
+}
+.signup__footer__img2 {
+  z-index: -1;
+  position: fixed;
+  bottom: 0px;
+  right: 5px;
+  height: 200px;
+  width: 200px;
+}
+}
+
+@media (min-width: 1200px) {
+  .signup__footer__img1 {
+    height: 350px;
+    width: 350px;
+  }
+  .signup__footer__img2 {
+    height: 350px;
+    width: 350px;
+  }
 }
