--- a/src/styles/pages/manageBoard.scss
+++ b/src/styles/pages/manageBoard.scss
@@ -7,6 +7,7 @@ $background-blue: rgb(0, 121, 191);
   max-width: 825px;  
   min-width: 288px;
   width: 100%;
+  height: 80vh;
 
   &__header {
     margin-left: 30px;    
@@ -73,13 +74,14 @@ $background-blue: rgb(0, 121, 191);
       border: none;
       box-shadow: none;
       color: #172b4d;
+      cursor: pointer;
       display: table-cell;
       font-weight: 500;
       height: 100px;
       text-align: center;
       text-decoration: none;
       vertical-align: middle;
-      width: inherit;      
+      width: 100%;      
 
       &__item {
         background-color: $background-blue;
