--- a/src/styles/components/createBoard.scss
+++ b/src/styles/components/createBoard.scss
@@ -165,6 +165,11 @@
                 box-shadow: inset 0 0 0 2px #eb5a46;
                 background-color: #ebecf0;
             }
+
+            &:focus {
+                background-color: #ffffff;
+                box-shadow: inset 0 0 0 2px #0079bf;
+            }
         }
 
         &__button {
