--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -13,3 +13,4 @@
 @import './pages/signup.scss';
 @import './pages/mainboard.scss';
 @import './pages/manageBoard.scss';
+@import './pages/notFound.scss';
