feat: first ToDo implementations

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -5,6 +5,7 @@
 @import './components/Footer';
 @import './components/createBoard.scss';
 @import './components/backgroundBoard.scss';
+@import './components/ToDoCards.scss';
 
 
 //Pages
