--- a/src/styles/components/ToDoCards.scss
+++ b/src/styles/components/ToDoCards.scss
@@ -1,3 +1,13 @@
+button{
+  background-color: #0079BF;
+  border: none;
+  border-radius: 3px;
+  color: #e2dce9;
+  padding: 2px 5px;
+  margin-left: 3px;
+}
+
+
 .ToDo {
   background-color: rgb(161, 150, 150);
   height: 100vh;
@@ -8,8 +18,7 @@
 .ToDo__column {
   font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Noto Sans,Ubuntu,Droid Sans,Helvetica Neue,sans-serif;
   color: #172b4d;
-  background-color: rgba(247, 247, 247, 0.986);
-  border: 1px solid rgb(241, 237, 237);
+  background-color: transparent;
   border-radius: 3px;
   min-width: 250px;
   width: auto;
@@ -22,11 +31,21 @@
 }
 .ToDo__listTitle__input{
   border: 0;
+  border-radius: 3px;
+  background-color: transparent;
+  color: white;
+  font-size: 20px;
 }
 .ToDo__listTitle__input:hover {
   transition-duration: 0.4s;
   background-color: #e2dce9;
 }
+
+.ToDo__listTitle__input::placeholder{
+  color: white;
+  font-size: 20px;
+}
+
 .ToDo__cards{
   font: inherit;
   color: #172b4d;
@@ -77,6 +96,8 @@
 }
 .ToDo__input__text{
   border: 0;
+  border-radius: 3px;
+  background-color: #F4F5F7;
 }
 .ToDo__input__text:hover {
   transition-duration: 0.4s;
