--- a/src/styles/pages/mainboard.scss
+++ b/src/styles/pages/mainboard.scss
@@ -1,7 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@500&display=swap');
 .headerBoard{
     width: 100%;
     color: white;
-    font-size: .9rem;
     cursor: pointer;
     list-style: none;
     float: none;
@@ -19,6 +19,7 @@
         color: white;
         display: block;
         margin: 5px;
+        font-size: 15px;
         
         
       }
@@ -36,15 +37,16 @@
         justify-content: center;
         background-color: transparent;
         border: none;
-        padding: 10px 10px;
         margin: 5px 10px 8px 50px;
         color: white;
-        font-size: .9 rem;
+        font-size: 20px;
+        font-family: 'Noto Sans', sans-serif;
       }
 
       input::placeholder{
         color: white;
-        font-size: 15px;
+        font-size: 20px;
+        font-family: 'Noto Sans', sans-serif;
       }
 
       input:hover{
@@ -95,6 +97,22 @@
   .buttonCard::placeholder{
     color: white;
     
+  }
+
+  .colums{
+    background-color: rgb(82, 164, 212);
+    margin: 10px 10px;
+    border-radius: 5px;
+    display: inline-block;
+    color: white;
+    font-size: 15px;
+   
+
+  }
+
+  .list__Columns__Board{
+    display: flex;
+    align-items: flex-start;
   }
 
 }
