--- a/src/styles/pages/login.scss
+++ b/src/styles/pages/login.scss
@@ -245,7 +245,11 @@ li {
     background-color: #F9FAFC;
     position: relative;
     z-index: 0;
-    height: 100vh;
+    min-height: 100vh;
+    height: auto;
+    margin: 0;
+    padding-bottom: 15px;
+    padding-top: 15px;
   }
   .login__form {
     display: block;
