--- a/src/styles/pages/mainboard.scss
+++ b/src/styles/pages/mainboard.scss
@@ -76,7 +76,8 @@
 .workSpace{
   background-color: #0079BF;
   width: 100%;
-  height: 90vh;
+  min-height: 90vh;
+  height: auto;
   padding-top: 30px;
   
   .textContent{
@@ -112,7 +113,15 @@
 
   .list__Columns__Board{
     display: flex;
+    flex-wrap: wrap;
     align-items: flex-start;
+    margin: 0;
+    justify-content: center;
   }
+ /*  @media {
+    .list__Columns__Board{
+
+    }
+  } */
 
 }
